[TEST] 나의 게시글 조회 관련 테스트 코드 수정